--- a/server/css/base.css
+++ b/server/css/base.css
@@ -1,6 +1,19 @@
+/*
+#ECEFF1
+#CFD8DC
+#B0BEC5
+#90A4AE
+#78909C
+#607D8B Azul-Gris
+#546E7A
+#455A64
+#37474f
+#263238
+*/
+
 h1 {
     margin: 0.8em 0 0.5em 0;
-    color: #333;
+    color: #263238;
     font-weight: normal;
     font-family: 'Orienta', sans-serif;
     font-size: 36px;
@@ -13,8 +26,12 @@ footer {
     bottom: 0;
     left: 0;
     padding: 1rem;
-    background-color: #efefef;
+    background-color: #B0BEC5;
     text-align: center;
+}
+
+body {
+    background: #90A4AE;
 }
 
 body>section {
@@ -23,10 +40,62 @@ body>section {
 
 .pure-form input[type="text"] {
     margin-bottom: 1em;
+    background: inherit;
+    box-shadow: none;
+    border: none;
+    border-bottom: 1px solid #263238;
+}
+
+.pure-form input[type="text"]:focus {
+    outline:none;
+    border-color: #CFD8DC;
+    color: #CFD8DC;
+}
+
+.group {
+    position: relative;
+    margin-top: 1em;
+}
+
+.pure-form label {
+    color: #37474f;
+    font-size:1em;
+    font-weight:bolder;
+    left:0.5em;
+    position: absolute;
+    top: -1.4em;
+}
+
+.pure-form input:focus + label {
+    color: #CFD8DC;
+    font-weight: bolder;
+    font-size:1.1em;
+}
+
+.pure-button {
+    background-color: #455a64;
+    color: #eceff1;
 }
 
 p[name="error"] {
-    color: darkred;
+    color: #263238;
     font-weight: bolder;
     padding-top: 1em;
+}
+
+.pure-menu {
+    padding: 0.5em;
+    box-shadow: 0 1px 1px rgba(0,0,0, 0.10);
+    background: #546E7A
+}
+
+.pure-menu a {
+    color:#b0bec5
+}
+
+.pure-menu li a:hover,
+.pure-menu li a:focus {
+    background: none;
+    border: none;
+    color: #CFD8DC;
 }
