--- a/server/css/base.css
+++ b/server/css/base.css
@@ -1,23 +1,26 @@
 /*
-#ECEFF1
-#CFD8DC
-#B0BEC5
-#90A4AE
-#78909C
-#607D8B Azul-Gris
-#546E7A
-#455A64
-#37474f
-#263238
+#CFD8DC Light
+#607D8B Blue Grey
+#455A64 Dark
+#263238 Darker
+
+#A7FFEB Teal Accent
 */
 
 h1 {
     margin: 0.8em 0 0.5em 0;
-    color: #263238;
+    color: #CFD8DC;
     font-weight: normal;
     font-family: 'Orienta', sans-serif;
     font-size: 36px;
     line-height: 40px;
+}
+
+li {
+    font-size: 16px;
+    font-weight: bolder;
+    color: #CFD8DC;
+    list-style: none;
 }
 
 footer {
@@ -26,12 +29,12 @@ footer {
     bottom: 0;
     left: 0;
     padding: 1rem;
-    background-color: #B0BEC5;
+    background-color: #CFD8DC;
     text-align: center;
 }
 
 body {
-    background: #90A4AE;
+    background: #607D8B;
 }
 
 body>section {
@@ -43,7 +46,29 @@ body>section {
     background: inherit;
     box-shadow: none;
     border: none;
+    color: #263238;
+    opacity: 1;
     border-bottom: 1px solid #263238;
+}
+
+::-webkit-input-placeholder {
+    color: #CFD8DC;
+    opacity: 0.5;
+}
+
+:-moz-placeholder {
+    color: #CFD8DC;
+    opacity: 0.5;
+}
+
+::-moz-placeholder {
+    color: #CFD8DC;
+    opacity: 0.5;
+}
+
+:-ms-input-placeholder {
+    color: #CFD8DC;
+    opacity: 0.5;
 }
 
 .pure-form input[type="text"]:focus {
@@ -58,7 +83,7 @@ body>section {
 }
 
 .pure-form label {
-    color: #37474f;
+    color: #263238;
     font-size:1em;
     font-weight:bolder;
     left:0.5em;
@@ -73,8 +98,9 @@ body>section {
 }
 
 .pure-button {
-    background-color: #455a64;
-    color: #eceff1;
+    background-color: #263238;
+    font-weight: bolder;
+    color: #CFD8DC;
 }
 
 p[name="error"] {
@@ -86,16 +112,17 @@ p[name="error"] {
 .pure-menu {
     padding: 0.5em;
     box-shadow: 0 1px 1px rgba(0,0,0, 0.10);
-    background: #546E7A
+    background: #455A64
 }
 
 .pure-menu a {
-    color:#b0bec5
+    color:#CFD8DC;
+    font-weight: bolder;
 }
 
 .pure-menu li a:hover,
 .pure-menu li a:focus {
     background: none;
     border: none;
-    color: #CFD8DC;
+    color: #A7FFEB;
 }
